--- a/config/gateway.yml
+++ b/config/gateway.yml
@@ -15,6 +15,8 @@ logging:
 spring:
   application:
     name: gateway
+  main:
+    web-application-type: reactive
   #  config:
   #    import: configserver:http://localhost:8888
   cloud:
