--- a/config/gateway.yml
+++ b/config/gateway.yml
@@ -65,9 +65,9 @@ spring:
             client-secret: SFlGuX2oiq4ouMHcrLZTt1sqA4GGJlkl
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:8180/realms/edme-realm
+#      resourceserver:
+#        jwt:
+#          issuer-uri: http://localhost:8180/realms/edme-realm
 
 eureka:
   client:
